Backport forge 1.16.5